// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</p>
`;

exports[`composition hook should return with Columns props 1`] = `
Object {
  "children": <Context.Provider
    value={
      Object {
        "isGapless": false,
        "minBreakpoint": undefined,
      }
    }
  />,
  "className": "css-17d6bg7 css-1pwrqjj css-3ekj6a fp-Box fp-Columns",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 test fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`overrides Columns.Column.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`overrides Columns.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-12 {
  background-color: red;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "both" 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-3 {
  margin-left: auto;
  margin-right: auto;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "left" 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-3 {
  margin-left: auto;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "right" 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-0 {
  margin-right: auto;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of values between 1 and 11 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-3 {
  margin-left: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    margin-left: 0;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    margin-left: 0;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly when isGapless = true 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true and minBreakpoint = mobile 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true and minBreakpoint = tablet 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

@media screen and (max-width:480px) {
  .emotion-0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when minBreakpoint is mobile 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly when minBreakpoint is tablet 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-14 {
  color: #3722ed !important;
}

.emotion-2 {
  background-color: #9c22ed !important;
}

<div
  class="emotion-12 emotion-1 emotion-14 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-5 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-5 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-5 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when all columns have sizes 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:768px) {
  .emotion-6 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-6 {
    width: 100%;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width:768px) {
  .emotion-9 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-9 {
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-9 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when one of the columns does not have a size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-6 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width:768px) {
  .emotion-9 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-9 {
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-9 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when the first column does not have a size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:768px) {
  .emotion-6 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-6 {
    width: 100%;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width:768px) {
  .emotion-9 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-9 {
    width: 100%;
  }
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-9 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when there is space still left on the right 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when all spreadOffsets are specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

@media screen and (max-width:1440px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media screen and (max-width:1200px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

.emotion-0 {
  margin-left: 8.333333333333332%;
}

@media screen and (max-width:1440px) {
  .emotion-0 {
    margin-left: 16.666666666666664%;
  }
}

@media screen and (max-width:1200px) {
  .emotion-0 {
    margin-left: 25%;
  }
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    margin-left: 33.33333333333333%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    margin-left: 41.66666666666667%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    margin-left: 50%;
  }
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only mobile spread offset is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:480px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only spreadOffset and spreadDesktopOffset is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-0 {
  margin-left: 16.666666666666664%;
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    margin-left: 33.33333333333333%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    margin-left: 0;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    margin-left: 0;
  }
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only tablet spread offset is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when all spreads are specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

@media screen and (max-width:1440px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media screen and (max-width:1200px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width:1440px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 16.666666666666664%;
  }
}

@media screen and (max-width:1200px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 25%;
  }
}

@media screen and (max-width:1024px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width:768px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 41.66666666666667%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only mobile spread is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:480px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:480px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only spread and spreadDesktop is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

@media screen and (max-width:1024px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:768px) {
  .emotion-0 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width:1024px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width:768px) {
  .emotion-3 {
    width: 100%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only tablet spread is specified 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width:480px) {
  .emotion-0 {
    width: 100%;
  }
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width:768px) {
  .emotion-3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width:480px) {
  .emotion-3 {
    width: 100%;
  }
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`theming Columns.Column.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;

exports[`theming Columns.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width:768px) {
  .emotion-0 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-12:last-child {
  margin-bottom: -0.5rem;
}

.emotion-12 {
  background-color: red;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-Columns"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Columns.Column"
  >
    Column
  </div>
</div>
`;
